--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
-node_modules/
+# Ignore frontend build and dependencies (even if they don't exist yet)
+frontend/node_modules/
+frontend/build/
+frontend/.pnp/
+frontend/.pnp.js
+
+# Ignore env files
+frontend/.env*
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
