--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,35 @@
-# Ignore frontend build and dependencies (even if they don't exist yet)
-frontend/node_modules/
-frontend/build/
-frontend/.pnp/
-frontend/.pnp.js
+# Node.js dependencies
+node_modules/
 
-# Ignore env files
-frontend/.env*
+# Build output directories
+build/
+dist/
+
+# Ignore environment files (for both frontend and backend)
+*.env
+*.env.*
+
+# OS-specific files
+.DS_Store       # macOS
+Thumbs.db       # Windows
+
+# Log files
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# IDE/Editor settings
+.vscode/
+.idea/
+
+# Dependency directories (for Yarn and NPM)
+.pnp/
+.pnp.js
+
+# Test coverage directories
+coverage/
+
+# Temporary files
+*.log
+*.bak
+*.swp
